--- a/style.css
+++ b/style.css
@@ -1,1 +1,183 @@
-Hello World
+@import url('https://fonts.googleapis.com/css2?family=Lato');
+
+    {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    color: darkcyan;
+    font: 18px/1.618 sans-serif font-family: 'Lato', sans-serif;
+}
+
+a {
+    color: darkcyan;
+    padding: .25rem .5rem;
+    text-decoration: none;
+}
+
+.container {
+    background-color: #f5f5f5;
+    margin: 2rem auto;
+    max-width: 60rem;
+    width: 90%;
+    -webkit-box-shadow: 4px 17px 31px -14px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 4px 17px 31px -14px rgba(0, 0, 0, 0.75);
+    box-shadow: 4px 17px 31px -14px rgba(0, 0, 0, 0.75);
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#header__logo {
+    margin-left: 1rem;
+    font-style: bold;
+}
+
+.header__nav_list {
+    display: flex;
+}
+
+.header__nav_listItem {
+    list-style-type: none;
+    margin: 1rem;
+}
+
+.header__nav_listItem:hover {
+    background-color: #777;
+    border: 1px solid #4cb691;
+    border-radius: 1rem;
+    transition: .5s;
+}
+
+.profile {
+    display: flex;
+    justify-content: space-between;
+    margin: 2rem;
+}
+
+.profile__heading {
+    display: flex;
+    flex-direction: column;
+    margin-right: 1rem;
+}
+
+.profile__image {
+    height: auto;
+    max-width: 100%;
+    margin-right: 1rem;
+}
+
+.projects__title {
+    text-align: center;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.projects__column_figure {
+    text-align: center;
+}
+
+.projects__column_button {
+    border-radius: 5px;
+    bottom: .5rem;
+    color: #4cb691;
+    margin: 0px;
+    opacity: 0;
+    position: relative;
+    transition: opacity .5s ease-out;
+    transition: 1s;
+}
+
+.projects__column_figure:hover .projects__column_button {
+    bottom: 2.5rem;
+    opacity: .8;
+}
+
+.projects__column {
+    padding-left: .5rem;
+}
+
+.projects__column_title {
+    margin: 2rem;
+    text-align: center;
+}
+
+.projects__column_image {
+    text-align: center;
+    height: auto;
+    max-width: 100%;
+}
+
+.footer {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+
+.fa {
+    border-radius: 8px;
+    padding: 10px;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
+    width: 2rem;
+}
+
+.fa:hover {
+    opacity: .7;
+}
+
+.fa-linkedin {
+    background-color: #3B5998;
+    color: white;
+}
+
+.fa-github {
+    background: #000;
+    color: white;
+}
+
+footer__copyright {
+    margin-left: 1rem;
+}
+
+.footer__social {
+    margin-right: 1rem;
+}
+
+@media only screen and (max-width: 767px) {
+    .header {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .header__nav_list {
+        display: flex;
+        margin 0;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .profile {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
